# gymbuddy

./: .gitignore  HOW_TO_RUN.md  README.md  open_camera.py  requirements.txt  screenrecord.sh  secrets.sh.example  start.sh  test_curl_logic.py  test_voice_assistant.py  voice_assistant.py
gymbuddy_ros/: CMakeLists.txt  README.md  package.xml  requirements-ros.txt
gymbuddy_ros/launch/: gymbuddy.launch
gymbuddy_ros/msg/: FormStatus.msg  IntentUpdate.msg  Landmark.msg  Skeleton.msg  WorkoutStats.msg
gymbuddy_ros/scripts/: camera_input_node.py  display_node.py  form_analysis_node.py  intent_extractor_node.py  llm_decision_node.py  motivation_node.py  pose_detection_node.py  rep_counter_node.py  sim_skeleton_node.py  speech_to_text_node.py  text_to_speech_node.py  voice_io_node.py  wake_word_node.py  workout_manager_node.py
tests/: test_curl_logic.py  voice_assistant.py  voice_buddy.py
