<?xml version="1.0"?>
<package format="2">
  <name>gymbuddy_ros</name>
  <version>0.1.0</version>
  <description>GymBuddy ROS 1 nodes for one-arm bicep curl coaching.</description>
  <maintainer email="hafizadhaazahari@gmail.com">hafizadha</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
